Blender crashes when using dynamic paint and smoke simulator #34561

Closed
opened 2013-03-07 21:29:10 +01:00 by Henning Flessner · 5 comments

%%%I modelled a simple mesh. Weightpainted it with a cube and applied the smokesimulator on the canvas.
When I try to bake the smoke or render the animation, Blender crashes after around 110 of 200 frames.
I experienced the behaviour on Windows XP and also on Windows 7 with Blender 2.66 and 2.66a,
Blend file is attached.

%%%

%%%I modelled a simple mesh. Weightpainted it with a cube and applied the smokesimulator on the canvas. When I try to bake the smoke or render the animation, Blender crashes after around 110 of 200 frames. I experienced the behaviour on Windows XP and also on Windows 7 with Blender 2.66 and 2.66a, Blend file is attached. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Also on OS X 10.8.2, Blender 2.66a.
However, turning off Adaptive Resolution seems to fix the crashing problem. %%%

%%%Also on OS X 10.8.2, Blender 2.66a. However, turning off Adaptive Resolution seems to fix the crashing problem. %%%

%%%I can confirm that adaptive resolution seems to be the problem.%%%

%%%I can confirm that adaptive resolution seems to be the problem.%%%

%%%Thanks for the report! Fixed in SVN r55179.%%%

%%%Thanks for the report! Fixed in SVN r55179.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34561
No description provided.