Fix [#34561]: Possible smoke crash if smoke flow had lower density than adaptive domain "threshold".